// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card default 1`] = `
<li
  className="index__bathingspot-list-item"
  data-spot-id={1}
  id="1"
>
  <div>
    <img
      alt=""
      className="spot-image"
      src=""
    />
    <img
      alt=""
      className="state-image"
      src=""
    />
    <span
      className="spot-title"
    >
      Sweetwater
    </span>
    <span
      className="asteriks"
    >
       * 
    </span>
    <span
      className="spot-water"
    >
      Sweet
    </span>
    <a
      className="is-small button index__bathingspot-list-item-button is-pulled-right"
      href="/badestellen/1"
      onClick={[Function]}
    >
      Detail
    </a>
  </div>
</li>
`;

exports[`Storyshots SpotEditor default 1`] = `
<div>
  <div
    className="modal is-active"
  >
    <div
      className="modal-background"
    />
    <div
      className="modal-content"
    >
      <form
        onReset={[Function]}
        onSubmit={[Function]}
        style={
          Object {
            "paddingTop": "10px",
          }
        }
      >
        <div
          className="field is-grouped is-grouped-right"
        >
          <p
            className="control"
          >
            <button
              className="button is-primary"
              disabled={false}
              type="submit"
            >
              Speichern
            </button>
          </p>
          <p
            className="control"
          >
            <button
              className="button is-is-light"
              data-testid="handle-edit-mode-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Abbrechen
            </button>
          </p>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Basis Daten
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="name"
                >
                  Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="name"
                      name="name"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="nameLong"
                >
                  Langer Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="nameLong"
                      name="nameLong"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="water"
                >
                  Gewässer
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="water"
                      name="water"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="district"
                >
                  Distrikt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="district"
                      name="district"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="street"
                >
                  Straße
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="street"
                      name="street"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="postalCode"
                >
                  Postleitzahl
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="postalCode"
                      name="postalCode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="city"
                >
                  Stadt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="city"
                      name="city"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="website"
                >
                  Website URL
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="website"
                      name="website"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="lastClassification"
                >
                  Letzte Klassifizierung
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="lastClassification"
                      name="lastClassification"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="image"
                >
                  Bild URL
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="image"
                      name="image"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="latitude"
                >
                  Latitude
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="latitude"
                      name="latitude"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="longitude"
                >
                  Longitude
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="longitude"
                      name="longitude"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="elevation"
                >
                  Höhe über NN
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="elevation"
                      name="elevation"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="apiEndpoints"
                >
                  API Endpoints
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="apiEndpoints"
                      name="apiEndpoints"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="cyanoPossible"
                    >
                      <input
                        id="cyanoPossible"
                        name="cyanoPossible"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Cyanobakterien möglich
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Hygienische Beeinträchtigung durch:
            </legend>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influencePurificationPlant"
              >
                kommunale Klärwerke
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influencePurificationPlant"
                    name="influencePurificationPlant"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceCombinedSewerSystem"
              >
                Mischwassereinleitungen aus urbanen Gebieten
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influenceCombinedSewerSystem"
                    name="influenceCombinedSewerSystem"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceRainwater"
              >
                Regenwassereileitung aus urbanen Gebieten
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influenceRainwater"
                    name="influenceRainwater"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceAgriculture"
              >
                Einleitungen aus der Landwirtschaft
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    id="influenceAgriculture"
                    name="influenceAgriculture"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Zuständiges Gesundheitsamt
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartment"
                >
                  Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="healthDepartment"
                      name="healthDepartment"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentAddition"
                >
                  Zusatz
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="healthDepartmentAddition"
                      name="healthDepartmentAddition"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentStreet"
                >
                  Straße
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="healthDepartmentStreet"
                      name="healthDepartmentStreet"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentPostalCode"
                >
                  Postleitzahl
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="healthDepartmentPostalCode"
                      name="healthDepartmentPostalCode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentCity"
                >
                  Stadt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="healthDepartmentCity"
                      name="healthDepartmentCity"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentMail"
                >
                  E-Mail
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="healthDepartmentMail"
                      name="healthDepartmentMail"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="email"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentPhone"
                >
                  Telefonnummer
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="healthDepartmentPhone"
                      name="healthDepartmentPhone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Zusatz Daten
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="waterRescue"
                >
                  Wasserrettung
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      id="waterRescue"
                      name="waterRescue"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="waterRescueThroughDLRGorASB"
                    >
                      <input
                        id="waterRescueThroughDLRGorASB"
                        name="waterRescueThroughDLRGorASB"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Wasserrettung durch DLRG oder ASB?
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="lifeguard"
                    >
                      <input
                        id="lifeguard"
                        name="lifeguard"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Rettungschwimmer vor Ort
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="disabilityAccess"
                    >
                      <input
                        id="disabilityAccess"
                        name="disabilityAccess"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreie
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="disabilityAccessBathrooms"
                    >
                      <input
                        id="disabilityAccessBathrooms"
                        name="disabilityAccessBathrooms"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreie Waschräume
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="hasDisabilityAccesableEntrence"
                    >
                      <input
                        id="hasDisabilityAccesableEntrence"
                        name="hasDisabilityAccesableEntrence"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreier Eingang
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="restaurant"
                    >
                      <input
                        id="restaurant"
                        name="restaurant"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Restaurant
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="snack"
                    >
                      <input
                        id="snack"
                        name="snack"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Snack
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="parkingSpots"
                    >
                      <input
                        id="parkingSpots"
                        name="parkingSpots"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Parkplätze
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="bathrooms"
                    >
                      <input
                        id="bathrooms"
                        name="bathrooms"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Waschräume
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="bathroomsMobile"
                    >
                      <input
                        id="bathroomsMobile"
                        name="bathroomsMobile"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Mobile Toiletten
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="dogban"
                    >
                      <input
                        id="dogban"
                        name="dogban"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Hundeverbot
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="field is-grouped is-grouped-right"
        >
          <p
            className="control"
          >
            <button
              className="button is-primary"
              disabled={false}
              type="submit"
            >
              Speichern
            </button>
          </p>
          <p
            className="control"
          >
            <button
              className="button is-is-light"
              data-testid="handle-edit-mode-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Abbrechen
            </button>
          </p>
        </div>
      </form>
    </div>
    <button
      aria-label="close"
      className="modal-close is-large"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Checkbox default 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <div
        className="label"
      />
    </div>
    <div
      className="field-body"
    >
      <div
        className="field"
      >
        <div
          className="control"
        >
          <label
            className="checkbox"
            htmlFor="name"
          >
            <input
              checked={true}
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="form__checkbox--distance"
            >
              The Checkbox
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-right"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Input text 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <label
        className="label"
        htmlFor="name"
      >
        The Input
      </label>
    </div>
    <div
      className="field-body"
    >
      <div
        className="field"
      >
        <div
          className="control"
        >
          <input
            className=" input"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="foo"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-right"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Select default 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
      htmlFor="name"
    >
      The Checkbox
    </label>
    <div
      className="control"
    >
      <div
        className="select"
      >
        <select
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          value="yes"
        >
          <option
            value="yes"
          >
            YES
          </option>
          <option
            value="no"
          >
            NO
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-right"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        data-testid="handle-edit-mode-button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;
